--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   geolocator: ^9.0.2
   flutter_map: ^3.1.0
   latlng: any
+  image_picker: ^0.8.7
 
 dev_dependencies:
   flutter_test:
