--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  lottie: ^1.2.1
   google_maps_flutter: ^2.2.0
   get: ^4.3.8
   cupertino_icons: ^1.0.2
