--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,3 +31,7 @@ flutter:
   assets:
     - assets/
     - assets/images/
+  fonts:
+  - family: RobotoSlab
+    fonts:
+      - asset: assets/fonts/static/RobotoSlab-Bold.ttf
