--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,11 @@ dependencies:
   flutter_map: ^3.1.0
   latlng: any
   image_picker: ^0.8.7
-
+  linkedin_login: ^2.2.1
+  font_awesome_flutter: ^10.4.0
+  
+  
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
