--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ dependencies:
   image_picker: ^0.8.7
   linkedin_login: ^2.2.1
   font_awesome_flutter: ^10.4.0
-  
+  carousel_slider: ^4.0.0
   
   
 dev_dependencies:
