--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,8 +18,6 @@ dependencies:
   flutter_map: ^3.1.0
   latlng: any
   image_picker: ^0.8.7
-  bottom_navy_bar: ^6.0.0
-
   linkedin_login: ^2.2.1
   font_awesome_flutter: ^10.4.0
   carousel_slider: ^4.0.0
@@ -27,6 +25,7 @@ dependencies:
   firebase_auth: ^4.4.2
   prompt_dialog: ^1.0.0
   firebase_database: ^10.1.1
+  firebase_storage: ^11.0.10
   
 dev_dependencies:
   flutter_test:
