--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   prompt_dialog: ^1.0.0
   firebase_database: ^10.1.1
   firebase_storage: ^11.0.10
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
 dependency_overrides:
   firebase_messaging_platform_interface: any
@@ -33,7 +35,9 @@ dependency_overrides:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  test: any
+  hive_generator: ^1.1.3
+  build_runner: ^2.3.3
   flutter_lints: ^2.0.0
 
 flutter:
